modified:   index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Telegram bot</h1>
     <a>Description....</a>
-    <img scr="images.jpg"  alt="Text_test">
+    <!-- <img scr="images.jpg"  alt="Text_test"> -->
     
 </body>
 </html>
