modified:   index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Telegram bot</h1>
     <a>Description....</a>
     <!-- <img scr="images.jpg"  alt="Text_test"> -->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     
 </body>
 </html>
